--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "last 2 version",
     "> 2%",
     "IE 9"
-  ]
+  ],
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/jonrandahl/movielisting.git"
+  }
 }
